# fantia-crawler

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
src/: cli.py  crawler.py
src/fantia_crawler/: cli.py  crawler.py
