[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fantia-crawler"
version = "0.1.0"
description = "A metadata crawler for Fantia videos"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
fantia-crawler = "fantia_crawler.cli:main"